# hark

./: .gitignore  Cargo.toml  README.md  hark.nu  qemu.dtb  rust-toolchain.toml
.cargo/: config.toml
example/: Cargo.toml  build.rs
example/src/: main.rs
hark/: Cargo.toml  build.rs
hark-build/: Cargo.toml
hark-build/.cargo/: config.toml
hark-build/src/: lib.rs
hark-macro/: Cargo.toml
hark-macro/src/: lib.rs
hark/board/: hifive1-revb.json  hifive1-revb.toml  qemu-virt-riscv32.json  qemu-virt-riscv32.pkl  qemu-virt-riscv32.toml  qemu-virt-riscv64.json  qemu-virt-riscv64.pkl  qemu-virt-riscv64.toml  spec.pkl
hark/src/: kernel.ld  lib.rs  sync.rs
hark/src/arch/: mod.rs
hark/src/arch/riscv/: exception.rs  mod.rs  sbi.rs  start.rs  thread.rs  timer.rs
hark/src/debug/: mod.rs
hark/src/dev/: mod.rs  sifive_test.rs
hark/src/dev/interrupt/: mod.rs  plic.rs
hark/src/dev/power/: mod.rs  null.rs  sifive_test.rs
hark/src/dev/uart/: mod.rs  ns8250.rs  null.rs  sifive.rs
hark/src/heap/: mod.rs
hark/src/kernel/: debug.rs  mod.rs  panic.rs  shell.rs
hark/src/panic/: mod.rs
hark/src/platform/: console.rs  interrupt.rs  memory.rs  mod.rs  power.rs  qemu_virt_riscv.rs  time.rs
hark/src/platform/backend/: qemu_virt_riscv.rs  sifive_fe310.rs
hark/src/shell/: command.rs  mod.rs
hark/src/testing/: mod.rs
hark/src/thread/: mod.rs  scheduler.rs  stack.rs
kernel/: Cargo.toml  rust-toolchain.toml
kernel/.cargo/: config.toml
kernel/app/hello-world/: Cargo.toml
kernel/hark/: Cargo.toml  build.rs
kernel/hark/src/: lib.rs
kernel/hark/src/arch/: mod.rs
kernel/hark/src/arch/riscv/: kernel.ld  start.rs
kernel/hark/src/platform/qemu-virt-riscv/: platform.ld.inc
lib/cpuarch/: Cargo.toml
lib/cpuarch/src/: riscv.rs
lib/libarch/: Cargo.toml
lib/libarch/src/: lib.rs
lib/libarch/src/riscv/: csr.rs  mod.rs  sbi.rs
lib/regio/: Cargo.toml
lib/regio-macro/: Cargo.toml
lib/regio-macro/src/: lib.rs  riscv.rs
lib/regio/src/: lib.rs  riscv.rs
scripts/: bloat.nu  build.nu  dis  dis.nu  qemu  qemu.nu  set-board  set-board.nu  size.nu
test-apps/: Cargo.toml  hello-world.rs
