# Copyright (c) 2025 Joshua Seaton
#
# Use of this source code is governed by a MIT-style
# license that can be found in the LICENSE file or at
# https://opensource.org/licenses/MIT

[workspace]
members = [ "lib/*" ]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

license = "MIT"
readme = "README.md"
repository = "https://github.com/joshuaseaton/hark"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
