# Copyright (c) 2025 Joshua Seaton
#
# Use of this source code is governed by a MIT-style
# license that can be found in the LICENSE file or at
# https://opensource.org/licenses/MIT

[workspace]
members = [ "example", "hark", "hark-build", "lib/*" ]
default-members = [ "example", "hark", "lib/*" ]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

license = "MIT"
readme = "README.md"
repository = "https://github.com/joshuaseaton/hark"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
cast_possible_truncation = "allow"
deref_addrof = "allow" # `*&raw` is needed for static mut access.
empty_loop = "allow"
inline_always = "allow"
must_use_candidate = "allow"
new_without_default = "allow"
too_many_arguments = "allow"
too_many_lines = "allow"
wildcard_imports = "allow"

[profile.dev]
opt-level = 1
