# Copyright (c) 2025 Joshua Seaton
#
# Use of this source code is governed by a MIT-style
# license that can be found in the LICENSE file or at
# https://opensource.org/licenses/MIT

[package]
name = "example"
edition.workspace = true
publish = false

[[bin]]
name = "example"

[dependencies]
hark = { path = "../hark" }

[build-dependencies]
hark-build = { path = "../hark-build" }

[lints]
workspace = true

