# Copyright (c) 2025 Joshua Seaton
#
# Use of this source code is governed by a MIT-style
# license that can be found in the LICENSE file or at
# https://opensource.org/licenses/MIT

[package]
name = "hark-build"
version.workspace = true
edition.workspace = true

license.workspace = true
readme.workspace = true
repository.workspace = true

categories = [ "hardware-support", "os" ]
keywords = [ "hark" ]
description = "Build support for Hark"

[lib]

[lints]
workspace = true

