# Copyright (c) 2025 Joshua Seaton
#
# Use of this source code is governed by a MIT-style
# license that can be found in the LICENSE file or at
# https://opensource.org/licenses/MIT

[package]
name = "hark"
version.workspace = true
edition.workspace = true

categories = [ "hardware-support", "os", "no-std" ]
keywords = [ "kernel", "microkernel", "unikernel" ]
description = "Here, Another Rust Kernel"

license.workspace = true
readme.workspace = true
repository.workspace = true

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies]
cpuarch = { path = "../lib/cpuarch" }

[lints]
workspace = true

