# Copyright (c) 2025 Joshua Seaton
#
# Use of this source code is governed by a MIT-style
# license that can be found in the LICENSE file or at
# https://opensource.org/licenses/MIT

[package]
name = "hark"
version.workspace = true
edition.workspace = true

links = "hark"

categories = [ "hardware-support", "os", "no-std" ]
keywords = [ "kernel", "microkernel", "unikernel" ]
description = "Here, Another Rust Kernel"

license.workspace = true
readme.workspace = true
repository.workspace = true

[build-dependencies]
hark-build = { path = "../hark-build" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies]
bitfld = "0.8.0"
cfg-if = "1.0"
derive_more = {version = "2.1", default-features = false, features = ["deref", "from"]}
libarch = { path = "../lib/libarch" }
regio = { path = "../lib/regio" }
talc = "4.4"
zerocopy = { version = "0.8", features = [ "derive" ] }

[lints]
workspace = true

