# Copyright (c) 2025 Joshua Seaton
#
# Use of this source code is governed by a MIT-style
# license that can be found in the LICENSE file or at
# https://opensource.org/licenses/MIT

[package]
name = "test-apps"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hello-world"
path = "hello-world.rs"

[dependencies]
hark = { path = "../hark" }

[lints]
workspace = true
