# Copyright (c) 2025 Joshua Seaton
#
# Use of this source code is governed by a MIT-style
# license that can be found in the LICENSE file or at
# https://opensource.org/licenses/MIT

[package]
name = "hark"
version.workspace = true
edition.workspace = true

categories = [ "hardware-support", "os", "no-std" ]
keywords = [ "kernel", "microkernel", "unikernel" ]
description = "Here, Another Rust Kernel"

license.workspace = true
readme.workspace = true
repository.workspace = true

[lib]
crate-type = [ "rlib" ]

[features]
# Whether hark is expected to be booted in machine mode on RISC-V targets.
riscv_m_mode = []

[dependencies]
cpuarch = { path = "../../lib/cpuarch" }

[lints]
workspace = true
