# Copyright (c) 2025 Joshua Seaton
#
# Use of this source code is governed by a MIT-style
# license that can be found in the LICENSE file or at
# https://opensource.org/licenses/MIT

[package]
name = "cpuarch"
version.workspace = true
edition.workspace = true

[dependencies]
bitfld = "0.1"
zerocopy = { version = "0.8", features = [ "derive" ] }

[lints]
workspace = true
