# Copyright (c) 2025 Joshua Seaton
#
# Use of this source code is governed by a MIT-style
# license that can be found in the LICENSE file or at
# https://opensource.org/licenses/MIT

[package]
name = "libarch"
version.workspace = true
edition.workspace = true

categories = [ "hardware-support", "no-std", "os" ]
keywords = [ "arch", "cpu" ]
description = "API for low-level machine access and related type abstractions"

license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
bitfld = "0.5"
cfg-if = "1.0"
zerocopy = { version = "0.8", features = [ "derive" ] }

[lints]
workspace = true
