# Copyright (c) 2025 Joshua Seaton
#
# Use of this source code is governed by a MIT-style
# license that can be found in the LICENSE file or at
# https://opensource.org/licenses/MIT

[package]
name = "regio-macro"
version = "0.1.0"
edition.workspace= true

categories = []
description = "Proc macros for regio"
keywords = []

license.workspace = true
readme.workspace = true
repository.workspace = true


[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"

[lib]
proc-macro = true
